--- a/view/index.html
+++ b/view/index.html
@@ -4,28 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>zagy-imaging</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Saira:wght@200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
 <header class="mainheader">
 <!-- <img class="apiLogo" src=""> -->
-<h1>logo</h1>
+<h1>zagy-imaging</h1>
 </header>
 <div  class="secondSection">
-    <form id="uploadImageForm">
+    <form id="uploadImageForm" onSubmit="return false; // Returning false stops the page from reloading">
         <label for="picUpload" >upload image to the server</label>
-        <input type="file"  id="picUpload" accept="image/png, image/jpeg" class="formButtons"/>
+        <input type="file"  id="picUpload" accept="image/png, image/jpeg" class="formButtons" name="image" multiple onchange="readURL(this)"/>
         <button type="submit" class="formButtons" id="submitButton">UPLAOAD</button> 
     </form>
 </div>   
 <div id="gallery">
 <h1 class="galleryHeader">GALLERY</h1>
-<div class="subImages">
-<img src="../public/full/santamonica.jpg">
+<div class="subImages" id="displayedImages">
+<!-- <img src="../public/full/santamonica.jpg" title="santamoica">
 <img src="../public/full/deathnote.png">
 <img src="../public/full/fjord.jpg">
 <img src="../public/full/encenadaport.jpg">
@@ -53,13 +53,13 @@
 <img src="../public/full/santamonica.jpg">
 <img src="../public/full/deathnote.png">
 <img src="../public/full/fjord.jpg">
-<img src="../public/full/encenadaport.jpg">
+<img src="../public/full/encenadaport.jpg"> -->
 </div>
 </div>
 <footer>
-    <p>nagy nabil</p>
+    <p>made with 💖 by nagy nabil</p>
     <a href="https://github.com/nagy-nabil/images-api">github repo</a>
 </footer>
-<script src="./js/main.js"></script>
+<script src="/js/main.js"></script>
 </body>
 </html>
